@@ -24,7 +24,7 @@
 // as indices. This would simplify destruction and possibly construction.
 
 model	*merchant_large, *merchant_medium, *merchant_small,
-	*subVII, *subXXI, *destroyer_tribal, *troopship_medium,
+	*subVII, *subIXc40, *subXXI, *destroyer_tribal, *troopship_medium,
 	*battleship_malaya, *carrier_bogue, *torpedo_g7, *depth_charge_mdl, *gun_shell_mdl,
 	*skyhemisphere, *corvette_mdl, *freighter_medium, *freighter_large,
 	*tanker_small,
@@ -60,6 +60,7 @@ void init_global_data(void)
 	battleship_malaya = new model((get_data_dir() + MODEL_DIR + "battleship_malaya.mdl"));
 	carrier_bogue = new model((get_data_dir() + MODEL_DIR + "carrier_bogue.mdl"));
 	subVII = new model((get_data_dir() + MODEL_DIR + "subVII.mdl"));
+	subIXc40 = new model((get_data_dir() + MODEL_DIR + "subIXc40.mdl"));
 	subXXI = new model((get_data_dir() + MODEL_DIR + "subXXI.mdl"));
 	destroyer_tribal = new model((get_data_dir() + MODEL_DIR + "destroyer1.mdl"));
 	corvette_mdl = new model((get_data_dir() + MODEL_DIR + "corvette.mdl"));
@@ -149,6 +150,7 @@ void deinit_global_data(void)
 	delete battleship_malaya;
 	delete carrier_bogue;
 	delete subVII;
+	delete subIXc40;
 	delete subXXI;
 	delete destroyer_tribal;
 	delete corvette_mdl;
