@@ -21,7 +21,7 @@ using namespace std;
 
 // global models, textures, fonts
 extern class model *merchant_large, *merchant_medium, *merchant_small,
-	*subVII, *subXXI, *destroyer_tribal, *troopship_medium,
+	*subVII, *subIXc40, *subXXI, *destroyer_tribal, *troopship_medium,
 	*battleship_malaya, *carrier_bogue, *torpedo_g7, *depth_charge_mdl, *gun_shell_mdl,
 	*skyhemisphere, *corvette_mdl, *freighter_medium, *freighter_large,
 	*tanker_small,
